[package]
name = "rpio-dev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = { version = "0.2.7", features = ["unproven"] }
cortex-m = "0.7.4"
rpio-gpio = { path = "../rpio-gpio" }
rpio-spi = { path = "../rpio-spi" }

[features]
default = []