[package]
name = "rpio-examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
panic-halt = "0.2.0"
cortex-m-rt = "0.7.1"
cortex-m = "0.7.4"
embedded-hal = "0.2.7"
embedded-time = "0.12.1"
rp-pico = "0.2.0"
rp2040-hal = "0.3.0"
rpio = { path = "../rpio", features = ["rp2040", "spi", "flash"] }

[build]
target = "thumbv6m-none-eabi" 